Extract duplicate code into reusable function
Rename 'non_zero_string' --> 'is_non_zero_string' to adhere to naming convention

--- a/files/personal/template/profiles/.envrc
+++ b/files/personal/template/profiles/.envrc
@@ -1,8 +1,8 @@
 #!/usr/bin/env zsh
 
-type non_zero_string &> /dev/null 2>&1 || source "${HOME}/.shellrc"
+type is_non_zero_string &> /dev/null 2>&1 || source "${HOME}/.shellrc"
 
-! non_zero_string "${PERSONAL_PROFILES_DIR}" && warn "'PERSONAL_PROFILES_DIR' env var is not set. Aborting!!!" && exit
+! is_non_zero_string "${PERSONAL_PROFILES_DIR}" && warn "'PERSONAL_PROFILES_DIR' env var is not set. Aborting!!!" && exit
 
 replace_dir_if_exists_and_is_not_symlinked() {
   ! is_directory "${1}" && ! is_directory "${PERSONAL_PROFILES_DIR}/${2}" && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
