--- a/files/.shellrc
+++ b/files/.shellrc
@@ -14,23 +14,27 @@
 # execute 'FIRST_INSTALL=true zsh' to debug the load order of the custom zsh configuration files
 test -n "${FIRST_INSTALL+1}" && echo "loading ${0}"
 
-NC='\033[0m' # No Color
-BLACK='\033[0;30m'
-DARK_GRAY='\033[1;30m'
-RED='\033[0;31m'
-LIGHT_RED='\033[1;31m'
-GREEN='\033[0;32m'
-LIGHT_GREEN='\033[1;32m'
-ORANGE='\033[0;33m'
-YELLOW='\033[1;33m'
-BLUE='\033[0;34m'
-LIGHT_BLUE='\033[1;34m'
-PURPLE='\033[0;35m'
-LIGHT_PURPLE='\033[1;35m'
-CYAN='\033[0;36m'
-LIGHT_CYAN='\033[1;36m'
-LIGHT_GRAY='\033[0;37m'
-WHITE='\033[1;37m'
+colorize() {
+  printf "\x1b[${1}m"
+}
+
+NC=$(colorize '0') # No Color
+BLACK=$(colorize '0;30')
+DARK_GRAY=$(colorize '1;30')
+RED=$(colorize '0;31')
+LIGHT_RED=$(colorize '1;31')
+GREEN=$(colorize '0;32')
+LIGHT_GREEN=$(colorize '1;32')
+ORANGE=$(colorize '0;33')
+YELLOW=$(colorize '1;33')
+BLUE=$(colorize '0;34')
+LIGHT_BLUE=$(colorize '1;34')
+PURPLE=$(colorize '0;35')
+LIGHT_PURPLE=$(colorize '1;35')
+CYAN=$(colorize '0;36')
+LIGHT_CYAN=$(colorize '1;36')
+LIGHT_GRAY=$(colorize '0;37')
+WHITE=$(colorize '1;37')
 
 blue() {
   printf "${LIGHT_BLUE}${1}${NC}"
@@ -56,12 +60,12 @@ warn() (
   echo "$(yellow "**WARN** ${1}")"
 )
 
-non_zero_string() {
+is_non_zero_string() {
   ! test -z "${1}"
 }
 
 is_file() {
-  non_zero_string "${1}" && test -f "${1}"
+  is_non_zero_string "${1}" && test -f "${1}"
 }
 
 is_executable() {
@@ -69,7 +73,7 @@ is_executable() {
 }
 
 is_directory() {
-  non_zero_string "${1}" && test -d "${1}"
+  is_non_zero_string "${1}" && test -d "${1}"
 }
 
 is_git_repo() {
