Corrected comment relating to load order of zsh config files

--- a/files/.shellrc
+++ b/files/.shellrc
@@ -8,7 +8,7 @@
 # bootstrap installation of all other config files.
 #
 # file location: ${HOME}/.shellrc
-# load order: .zshenv, .zprofile [.shellrc], .zshrc [.zshrc.custom [.aliases [.aliases.custom]]], .zlogin
+# load order: .zshenv, .zprofile, .zshrc [.shellrc, .zshrc.custom [.aliases [.shellrc, .aliases.custom]]], .zlogin
 ################################################################################
 
 # execute 'FIRST_INSTALL=true zsh' to debug the load order of the custom zsh configuration files
