--- a/files/.envrc
+++ b/files/.envrc
@@ -1,5 +1,7 @@
 #!/usr/bin/env zsh
 
+# vim:filetype=zsh syntax=zsh tabstop=2 shiftwidth=2 softtabstop=2 expandtab autoindent fileencoding=utf-8
+
 #####################################
 # Reapply permissions for ssh files #
 #####################################
