--- a/files/personal/template/profiles/.envrc
+++ b/files/personal/template/profiles/.envrc
@@ -1,5 +1,7 @@
 #!/usr/bin/env zsh
 
+# vim:filetype=zsh syntax=zsh tabstop=2 shiftwidth=2 softtabstop=2 expandtab autoindent fileencoding=utf-8
+
 type is_non_zero_string &> /dev/null 2>&1 || source "${HOME}/.shellrc"
 
 ! is_non_zero_string "${PERSONAL_PROFILES_DIR}" && warn "'PERSONAL_PROFILES_DIR' env var is not set. Aborting!!!" && exit
