- Revert back to rancher from orbstack due to license issue - Add default options for 'fgrep' and 'egrep' similar to 'grep' - Add some more useful aliases for macos

--- a/files/Brewfile
+++ b/files/Brewfile
@@ -74,8 +74,8 @@ cask 'microsoft-remote-desktop'
 cask 'monolingual'
 cask 'notunes'
 cask 'ollama', restart_service: :changed
-cask 'orbstack'
 cask 'protonvpn'
+cask 'rancher'
 cask 'raycast'
 cask 'silicon' if is_arm
 cask 'stats'
