--- a/files/.inputrc
+++ b/files/.inputrc
@@ -1,2 +1,27 @@
-set completion-ignore-case On
 set blink-matching-paren on
+set completion-ignore-case on
+set show-all-if-ambiguous on
+# set bell-style none
+
+# Do not autocomplete hidden files unless the pattern explicitly begins with a dot
+# set match-hidden-files off
+
+# Show all autocomplete results at once
+# set page-completions off
+
+setopt menu_complete
+setopt extendedglob
+
+set visible-stats on
+set input-meta on
+set output-meta on
+set convert-meta off
+
+bindkey -e
+bindkey '[C' forward-word
+bindkey '[D' backward-word
+
+# setopt RM_STAR_SILENT
+
+set mark-symlinked-directories on
+set skip-completed-text on
