Resurrect navigating into and out of the home and profiles directories on initial setup to force the symlinks to be created as necessary

--- a/files/.envrc
+++ b/files/.envrc
@@ -5,10 +5,10 @@
 #####################################
 # Reapply permissions for ssh files #
 #####################################
-test -n "$(ls -A "${HOME}/.ssh")" && chmod -R 600 "${HOME}"/.ssh/*
+test -n "$(ls -A "${HOME}/.ssh")" && echo "Setting permissions on '${HOME}/.ssh' folder contents" && chmod -R 600 "${HOME}"/.ssh/*
 
 #######################################
 # Reapply permissions for gnupg files #
 #######################################
 # TODO: Not sure if this is correct/reqd (now that i have generated my own gpg key pair) - so commenting out for now
-# test -n "$(ls -A "${HOME}/.gnupg")" && sudo chmod -R 600 "${HOME}"/.gnupg/*; chmod 700 "${HOME}"/.gnupg; sudo rm -rf .gnupg/crls.d/*
+# test -n "$(ls -A "${HOME}/.gnupg")" && echo "Setting permissions on '${HOME}/.gnupg' folder contents" && sudo chmod -R 600 "${HOME}"/.gnupg/*; chmod 700 "${HOME}"/.gnupg; sudo rm -rf .gnupg/crls.d/*
