--- a/files/Brewfile
+++ b/files/Brewfile
@@ -81,7 +81,7 @@ cask 'silicon' if is_arm
 cask 'stats'
 cask 'the-unarchiver'
 cask 'vscodium@insiders'   # TODO: Doesn't handle 'Remote Containers' and GH-based auto-syncing when comparing to VSCode
-cask 'zen-browser'
+cask 'zen-browser@twilight'
 cask 'zoom'
 
 # VSCode extensions
