--- a/files/personal/template/profiles/.envrc
+++ b/files/personal/template/profiles/.envrc
@@ -7,14 +7,16 @@ type is_non_zero_string &> /dev/null 2>&1 || source "${HOME}/.shellrc"
 ! is_non_zero_string "${PERSONAL_PROFILES_DIR}" && warn "'PERSONAL_PROFILES_DIR' env var is not set. Aborting!!!" && exit
 
 replace_dir_if_exists_and_is_not_symlinked() {
-  ! is_directory "${1}" && ! is_directory "${PERSONAL_PROFILES_DIR}/${2}" && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
+  local target="${PERSONAL_PROFILES_DIR}/${2}"
+  ! is_directory "${1}" && ! is_directory "${target}" && warn "skipping symlinking $(basename "${2}") since either source or target don't exist!!!" && return
 
-  mkdir -pv "$(dirname "${1}")"
-  mkdir -pv "${PERSONAL_PROFILES_DIR}/${2}"
+  mkdir -pv "$(dirname "${1}")" "${target}"
+
   # If the folder exists but is not a symlink, move it into the source location
-  is_directory "${1}" && ! test -L "${1}" && rm -rf "${PERSONAL_PROFILES_DIR}/${2}" && mv -f "${1}" "${PERSONAL_PROFILES_DIR}/${2}"
+  is_directory "${1}" && ! test -L "${1}" && rm -rf "${target}" && mv -fv "${1}" "${target}"
+
   # if the folder doesn't exist, create the symlink
-  ! is_directory "${1}" && ln -sf "${PERSONAL_PROFILES_DIR}/${2}" "${1}" && echo "Successfully symlinked ${1} --> ${PERSONAL_PROFILES_DIR}/${2}!!!"
+  ! is_directory "${1}" && ln -sf "${target}" "${1}" && echo "Successfully symlinked ${1} --> ${target}!!!"
 }
 
 # Capture Arc profile folder into git-tracked location
