Use colors uniformly when printing status messages during installation operations

--- a/files/--PERSONAL_PROFILES_DIR--/.envrc
+++ b/files/--PERSONAL_PROFILES_DIR--/.envrc
@@ -16,7 +16,7 @@ replace_dir_if_exists_and_is_not_symlinked() {
   is_directory "${1}" && ! test -L "${1}" && rm -rf "${target}" && mv -fv "${1}" "${target}"
 
   # if the folder doesn't exist, create the symlink
-  ! is_directory "${1}" && ln -sf "${target}" "${1}" && echo "Successfully symlinked ${1} --> ${target}!!!"
+  ! is_directory "${1}" && ln -sf "${target}" "${1}" && success "Successfully symlinked ${1} --> ${target}!!!"
 }
 
 # Capture Arc profile folder into git-tracked location
