--- a/files/.envrc
+++ b/files/.envrc
@@ -2,13 +2,15 @@
 
 # vim:filetype=zsh syntax=zsh tabstop=2 shiftwidth=2 softtabstop=2 expandtab autoindent fileencoding=utf-8
 
+type blue &> /dev/null 2>&1 || source "${HOME}/.shellrc"
+
 #####################################
 # Reapply permissions for ssh files #
 #####################################
-test -n "$(ls -A "${HOME}/.ssh")" && echo "Setting permissions on '${HOME}/.ssh' folder contents" && chmod -R 600 "${HOME}"/.ssh/*
+test -n "$(ls -A "${HOME}/.ssh")" && echo "$(blue "Setting permissions on '${HOME}/.ssh' folder contents")" && chmod -R 600 "${HOME}"/.ssh/*
 
 #######################################
 # Reapply permissions for gnupg files #
 #######################################
-# TODO: Not sure if this is correct/reqd (now that i have generated my own gpg key pair) - so commenting out for now
-# test -n "$(ls -A "${HOME}/.gnupg")" && echo "Setting permissions on '${HOME}/.gnupg' folder contents" && sudo chmod -R 600 "${HOME}"/.gnupg/*; chmod 700 "${HOME}"/.gnupg; sudo rm -rf .gnupg/crls.d/*
+# TODO: Not sure if this is correct/reqd (now that I have generated my own gpg key pair). Commenting out since this cuases errors
+# test -n "$(ls -A "${HOME}/.gnupg")" && echo "$(blue "Setting permissions on '${HOME}/.gnupg' folder contents")" && sudo chmod -R 600 "${HOME}"/.gnupg/*; chmod 700 "${HOME}"/.gnupg; sudo rm -rf .gnupg/crls.d/*
