--- a/files/--HOME--/.inputrc
+++ b/files/--HOME--/.inputrc
@@ -10,7 +10,7 @@ set show-all-if-ambiguous on
 # set page-completions off
 
 setopt menu_complete
-setopt extendedglob
+setopt extended_glob
 
 set visible-stats on
 set input-meta on
@@ -21,7 +21,7 @@ bindkey -e
 bindkey '[C' forward-word
 bindkey '[D' backward-word
 
-# setopt RM_STAR_SILENT
+# setopt rm_star_silent
 
 set mark-symlinked-directories on
 set skip-completed-text on
