--- a/files/--HOME--/Brewfile
+++ b/files/--HOME--/Brewfile
@@ -69,6 +69,7 @@ cask 'jordanbaird-ice'
 cask 'keepassxc@beta'
 cask 'keepingyouawake'
 cask 'keybase'
+cask 'keycastr'
 cask 'libreoffice'
 cask 'monolingual'
 cask 'notunes'
@@ -174,7 +175,6 @@ end
 # cask 'git-credential-manager'   # https://docs.github.com/en/get-started/getting-started-with-git/caching-your-github-credentials-in-git
 # cask 'intellij-idea-ce'
 # cask 'kdiff3'
-# cask 'keycastr'
 # cask 'licecap'
 # cask 'lulu'
 # cask 'microsoft-remote-desktop'
