removed 'virtualbox' from Brewfile

--- a/files/--HOME--/Brewfile
+++ b/files/--HOME--/Brewfile
@@ -79,7 +79,6 @@ cask 'raycast'
 cask 'silicon' if is_arm
 cask 'stats'
 cask 'the-unarchiver'
-cask 'virtualbox'
 cask 'vscodium@insiders'   # TODO: Doesn't handle 'Remote Containers' and GH-based auto-syncing when compared to VSCode
 cask 'zen-browser@twilight'
 cask 'zoom'
@@ -182,3 +181,4 @@ end
 # cask 'netspot'
 # cask 'ngrok'
 # cask 'tempbox'
+# cask 'virtualbox'
