--- a/files/--HOME--/.shellrc
+++ b/files/--HOME--/.shellrc
@@ -44,7 +44,7 @@ export UPSTREAM_GH_USERNAME="vraravam" # Note: Do NOT change this
 export DOTFILES_DIR="${HOME}/.bin-oss"
 
 # Branch name of the dotfiles repo that's to be used for testing PR changes before merging
-export DOTFILES_BRANCH="utility-funcs"
+export DOTFILES_BRANCH="master"
 
 # All development codebases are cloned into a subfolder of this folder
 export PROJECTS_BASE_DIR="${HOME}/dev"
