Print more specific warning message when skipping cloning of the home and profiles repos.

--- a/files/--HOME--/.gitconfig
+++ b/files/--HOME--/.gitconfig
@@ -1,4 +1,4 @@
-# file location: ~/.gitconfig
+# file location: ${HOME}/.gitconfig
 
 # Note:
 # [Windows users] If you are on windows, please search for the word 'windows' - and fix those lines - they seem to cause some trouble
