Incorporate 'natsumi-browser' into the Zen profile folder

--- a/files/--PERSONAL_PROFILES_DIR--/.envrc
+++ b/files/--PERSONAL_PROFILES_DIR--/.envrc
@@ -48,3 +48,15 @@ replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Thunderbird" "Thunde
 
 # Capture KeePassXC profile folder into git-tracked location
 replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/KeePassXC" "KeePassXCProfile"
+
+# Clone the natsumi-browser repo into the ZenProfile/Profiles/chrome folder
+if is_directory "${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/"; then
+  mkdir -p "${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/chrome"
+  if is_git_repo "${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/chrome"; then
+    git -C "${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/chrome" pull -r
+    success "Successfully updated natsumi-browser into the zen profile chrome folder"
+  else
+    git -C "${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/chrome" clone "git@github.com:greeeen-dev/natsumi-browser" .
+    success "Successfully cloned 'natsumi-browser' into '' ${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/chrome"
+  fi
+fi
