--- a/files/--PERSONAL_PROFILES_DIR--/.envrc
+++ b/files/--PERSONAL_PROFILES_DIR--/.envrc
@@ -49,6 +49,9 @@ replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Thunderbird" "Thunde
 # Capture KeePassXC profile folder into git-tracked location
 replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/KeePassXC" "KeePassXCProfile"
 
+# Capture Raycast profile folder into git-tracked location
+replace_dir_if_exists_and_is_not_symlinked "${HOME}/Library/Application Support/com.raycast.macos" "Raycast"
+
 # Clone the natsumi-browser repo into the ZenProfile/Profiles/chrome folder
 if is_directory "${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/"; then
   mkdir -p "${PERSONAL_PROFILES_DIR}/ZenProfile/Profiles/chrome"
